--- a/exercicios/d012/style.css
+++ b/exercicios/d012/style.css
@@ -35,6 +35,10 @@ header a:hover {
     text-decoration: underline;
 }
 
+section.normal {
+    background-color: white;
+}
+
 footer {
     background-color: black;
     color: white;
