--- a/exercicios/d012/style.css
+++ b/exercicios/d012/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', sans-serif;
+    --fonte3: 'Sriracha', cursiva;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +18,7 @@
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header {
@@ -19,6 +30,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 70px;
 }
 
 header > p {
@@ -35,6 +48,31 @@ header a:hover {
     text-decoration: underline;
 }
 
+section {
+    line-height: 70px;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 40px;
+}
+
+section > p {
+    padding-bottom: 30px;
+}
+
+section#imagem01 {
+    background-image: url(imagens/background001.jpg);
+    background-position: center center;
+    background-attachment: fixed;
+}
+
+section#imagem02 {
+    background-image: url(imagens/background002.jpg);
+    background-position: center center;
+    background-attachment: fixed;
+}
+
 section.normal {
     background-color: white;
 }
@@ -42,18 +80,12 @@ section.normal {
 section.imagem {
     background-color: rgb(57, 57, 57);
     color: white;
+    background-size: cover;
 }
 
 section.imagem > p {
-    background-color: rgba(0, 0, 0, 0.348);
-    width: 400px;
-}
-
-section {
-    line-height: 30px;
-    padding-top: 10vh;
-    padding-bottom: 10vh;
-    padding-left: 30px;
+    background-color: rgba(0, 0, 0, 0.725);
+    width: 600px;
 }
 
 footer {
